--- a/Cupcake/src/main/resources/templates/order.html
+++ b/Cupcake/src/main/resources/templates/order.html
@@ -25,6 +25,7 @@
     <!-- Scripts Load -->
     <script src="js/cart.js" defer></script>
     <script src="js/order.js" defer></script>
+    <script src="js/order-responsive.js" defer></script>
 
     <!-- Framwork load -->
     <link rel="stylesheet" href="css/guacamoleboy-wow.css">
@@ -36,7 +37,6 @@
     <script type="module" src="js/components/footer.js" defer></script>
     <script type="module" src="js/components/footer-nav.js" defer></script>
     <script type="module" src="js/generic/toJava.js" defer></script>
-
 
 </head>
 <body class="subpage">
