--- a/Cupcake/src/main/resources/templates/custom.html
+++ b/Cupcake/src/main/resources/templates/custom.html
@@ -65,12 +65,12 @@
     <!-- Hero Section End -->
 
     <section class="section-1">
-        <div class="section-custom-cupcake guac-container">
+        <div class="section-custom-cupcake guac-container guac-animate guac-fade-slide-up">
 
             <h2>Lav din egen cupcake</h2>
             <p>Ja, den er god nok. Som noget nyt hos Olsker kan du nu lave dine helt egne kombinationer af smage! Prøv herunder...</p>
 
-            <div class="guac-row cupcake-forms-row">
+            <div class="guac-row cupcake-forms-row guac-animate guac-fade-slide-up">
 
                 <!-- Input Form -->
                 <div class="cupcake-form-box">
