--- a/Cupcake/src/main/resources/templates/forgot.html
+++ b/Cupcake/src/main/resources/templates/forgot.html
@@ -39,7 +39,7 @@
 <a href="/login" class="exit-btn" title="Tilbage til login">&#10006;</a>
 
 <section class="login-section-1">
-    <div class="login-container">
+    <div class="login-container guac-animate guac-fade-slide-up">
 
         <h2>Forgot Something?</h2>
 
