--- a/Cupcake/src/main/resources/templates/galleri.html
+++ b/Cupcake/src/main/resources/templates/galleri.html
@@ -66,13 +66,13 @@
             <div class="guac-row">
 
                 <!-- Gallery col-12 Start -->
-                <div class="guac-col-12 guac-mt-5">
+                <div class="guac-col-12 guac-mt-5 guac-animate guac-fade-slide-up">
                     <h2>Galleri</h2>
                     <p>Se, like og kommenter vores nyeste opslag!</p>
                     
                     <!-- Grid Showcase Start -->
                     <div class="gallery-grid">
-                        <div class="gallery-item gallery-item--extreme">
+                        <div class="gallery-item gallery-item--extreme guac-animate guac-fade-slide-up">
                             <img src="/images/gallery/birthday.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
@@ -89,7 +89,7 @@
 
                             </div>
                         </div>
-                        <div class="gallery-item gallery-item--large">
+                        <div class="gallery-item gallery-item--large guac-animate guac-fade-slide-up">
                             <img src="/images/gallery/pride.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
@@ -106,7 +106,7 @@
 
                             </div>
                         </div>
-                        <div class="gallery-item gallery-item--medium">
+                        <div class="gallery-item gallery-item--medium guac-animate guac-fade-slide-up">
                             <img src="/images/gallery/nice.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
@@ -123,7 +123,7 @@
 
                             </div>
                         </div>
-                        <div class="gallery-item gallery-item--large">
+                        <div class="gallery-item gallery-item--large guac-animate guac-fade-slide-up">
                             <img src="/images/gallery/andreas.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
@@ -140,7 +140,7 @@
 
                             </div>
                         </div>
-                        <div class="gallery-item gallery-item--half">
+                        <div class="gallery-item gallery-item--half guac-animate guac-fade-slide-up">
                             <img src="/images/gallery/jonasmonster.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
@@ -157,7 +157,7 @@
 
                             </div>
                         </div>
-                        <div class="gallery-item gallery-item--medium">
+                        <div class="gallery-item gallery-item--medium guac-animate guac-fade-slide-up">
                             <img src="/images/gallery/jew.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
@@ -174,7 +174,7 @@
 
                             </div>
                         </div>
-                        <div class="gallery-item gallery-item--large">
+                        <div class="gallery-item gallery-item--large guac-animate guac-fade-slide-up">
                             <img src="/images/gallery/ebou.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
@@ -191,7 +191,7 @@
 
                             </div>
                         </div>
-                        <div class="gallery-item">
+                        <div class="gallery-item guac-animate guac-fade-slide-up">
                             <img src="/images/gallery/shit.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
@@ -208,7 +208,7 @@
 
                             </div>
                         </div>
-                        <div class="gallery-item gallery-item--medium">
+                        <div class="gallery-item gallery-item--medium guac-animate guac-fade-slide-up">
                             <img src="/images/gallery/pride.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
@@ -225,7 +225,7 @@
 
                             </div>
                         </div>
-                        <div class="gallery-item">
+                        <div class="gallery-item guac-animate guac-fade-slide-up">
                             <img src="/images/gallery/ebou.png" alt="Fødselsdags Cupcake" class="gallery-item__img">
                             <button class="heart-btn">
                                 <i class="fa-regular fa-heart"></i>
