--- a/Cupcake/src/main/resources/templates/index.html
+++ b/Cupcake/src/main/resources/templates/index.html
@@ -24,11 +24,14 @@
     <link rel="stylesheet" href="css/guacamoleboy-framework.css">
     <script src="js/guacamoleboy-wow.js"></script>
 
+    <!-- Font Awesome Load -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Script Load -->
-    <script src="js/button-to-top.js"></script>
-    <script src="js/notification.js"></script>
-    <script src="js/showcase.js"></script>
-    <script src="js/preloader.js"></script>
+    <script src="js/button-to-top.js" defer></script>
+    <script src="js/notification.js" defer></script>
+    <script src="js/showcase.js" defer></script>
+    <script src="js/preloader.js" defer></script>
 
     <!-- Modules -->
     <script type="module" src="js/components/navbar.js" defer></script>
@@ -50,13 +53,9 @@
 <div class="preloader"></div>
 <!-- Preloader -->
 
-<!-- Cookie Button Start -->
-<div class="cookie-btn"><i class="fa fa-arrow-up"></i></div>
-<!-- Cookie Button End -->
-
-<!-- Scroll-to-Top Button Start -->
+<!-- Scroll Button Start -->
 <button id="scrollToTopBtn" class="scroll-btn" onclick="scrollToSection()"><i class="fa fa-arrow-up"></i></button>
-<!-- Scroll-to-Top Button End -->
+<!-- Scroll Button End -->
 
 <!-- Navbar -->
 <div id="navbar-component"></div>
