--- a/Cupcake/src/main/resources/templates/apply.html
+++ b/Cupcake/src/main/resources/templates/apply.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Gruppe D"> <!-- Author of Website -->
 
     <!-- Visuals -->
-    <title>Olsker Cupcakes</title>
+    <title>Olsker Cupcakes - Ansøg</title>
 
     <!-- Icon -->
     <link rel="icon" href="/images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
@@ -19,7 +19,9 @@
     <!-- CSS Load -->
     <link rel="stylesheet" href="/css/style.css">
 
-    <!-- Scripts can also be loaded here with defer -->
+    <!-- Script Load -->
+    <script src="js/notification.js" defer></script>
+
     <!-- Framwork load -->
     <link rel="stylesheet" href="/css/guacamoleboy-wow.css">
     <link rel="stylesheet" href="/css/guacamoleboy-framework.css">
@@ -27,6 +29,8 @@
 
     <!-- Modules -->
     <script type="module" src="/js/components/navbar.js" defer></script>
+    <script type="module" src="js/components/footer.js" defer></script>
+    <script type="module" src="js/components/footer-nav.js" defer></script>
 
 </head>
 <body class="subpage">
@@ -40,13 +44,6 @@
 
         <div class="guac-container">
             <div class="guac-row">
-                
-                <div class="guac-col-auto subpage-cupcake-1">
-                    <img src="/images/page-content/index/cupcake-3.png" alt="Billede 1">
-                </div>
-                <div class="guac-col-auto subpage-cupcake-2">
-                    <img src="/images/page-content/index/cupcake-3.png" alt="Billede 2">
-                </div>
 
             </div>
         </div>
@@ -61,14 +58,41 @@
     <!-- Hero Section End -->
 
     <!-- Next Section Start -->
-    <section class="section-1">
+    <section class="section-1" style="height: 40rem !important;">
         <div class="guac-container">
-            <div class="guac-row">
-
+            <div class="guac-row guac-justify-center">
+                <div class="section-1-intro guac-mt-5 guac-animate guac-slide-up">
+                    <h2>Kommer snart!</h2>
+                    <p class="guac-pb-5">
+                        Hov.. Du har fundet en side som ikke helt er klar endnu.. Det er okay! Indtil da kan du
+                        benytte vores mange andre!
+                    </p>
+                </div>
             </div>
         </div>
+
+        <!-- End Wave Section 2 Start -->
+        <div class="wave-3">
+            <img src="images/waves/footer-wave.svg">
+        </div>
+        <!-- End Wave Section 2 End -->
+
     </section>
     <!-- Next Section End -->
+
+    <!-- Footer -->
+    <div id="footer-component"></div>
+    <!-- Footer -->
+
+    <!-- Footer Nav -->
+    <div id="footer-nav-component"></div>
+    <!-- Footer Nav -->
+
+    <!-- Notifications -->
+    <section>
+        <div id="guac-notification-container"></div>
+    </section>
+    <!-- Notifications -->
 
 
 </body>
