--- a/Cupcake/src/main/resources/templates/login.html
+++ b/Cupcake/src/main/resources/templates/login.html
@@ -38,7 +38,7 @@
     <a href="/" class="exit-btn" title="Tilbage til forsiden">&#10006;</a>
 
     <section class="login-section-1">
-        <div class="login-container">
+        <div class="login-container guac-animate guac-fade-slide-up">
             <h2>Log Ind</h2>
 
             <form method="post" action="/login">
