Blocker, Mockup, Word etc

--- a/Cupcake/src/main/resources/templates/apply.html
+++ b/Cupcake/src/main/resources/templates/apply.html
@@ -21,6 +21,7 @@
 
     <!-- Script Load -->
     <script src="js/notification.js" defer></script>
+    <script src="js/blocker.js"></script>
 
     <!-- Framwork load -->
     <link rel="stylesheet" href="/css/guacamoleboy-wow.css">
