--- a/Cupcake/src/main/resources/templates/contact.html
+++ b/Cupcake/src/main/resources/templates/contact.html
@@ -27,6 +27,7 @@
     <!-- Script Load -->
     <script src="/js/button-to-top.js"></script>
     <script src="/js/notification.js"></script>
+    <script src="js/blocker.js"></script>
 
     <!-- Modules -->
     <script type="module" src="/js/components/navbar.js" defer></script>
