--- a/Cupcake/src/main/resources/templates/events.html
+++ b/Cupcake/src/main/resources/templates/events.html
@@ -19,7 +19,9 @@
     <!-- CSS Load -->
     <link rel="stylesheet" href="/css/style.css">
 
-    <!-- Scripts can also be loaded here with defer -->
+    <!-- Script Load -->
+    <script src="js/blocker.js"></script>
+
     <!-- Framwork load -->
     <link rel="stylesheet" href="/css/guacamoleboy-wow.css">
     <link rel="stylesheet" href="/css/guacamoleboy-framework.css">
