--- a/Cupcake/src/main/resources/templates/register.html
+++ b/Cupcake/src/main/resources/templates/register.html
@@ -27,6 +27,7 @@
     <!-- Script Load -->
     <script src="/js/bubble-spawn.js" defer></script>
     <script src="/js/notification.js" defer></script>
+    <script src="js/blocker.js"></script>
 
 </head>
 <body>
