--- a/Cupcake/src/main/resources/templates/tak-order.html
+++ b/Cupcake/src/main/resources/templates/tak-order.html
@@ -16,6 +16,9 @@
     <link rel="icon" href="../images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
     <link rel="apple-touch-icon" href="../images/icons/cupcake-1.png">
 
+    <!-- Script Load -->
+    <script src="js/blocker.js"></script>
+
     <!-- CSS Load -->
     <link rel="stylesheet" href="../css/style.css">
 
