--- a/Cupcake/src/main/resources/templates/custom.html
+++ b/Cupcake/src/main/resources/templates/custom.html
@@ -32,6 +32,7 @@
     <script src="js/cart.js" defer></script>
     <script src="js/order.js" defer></script>
     <script src="js/notification.js" defer></script>
+    <script src="js/blocker.js"></script>
 
     <!-- Modules -->
     <script type="module" src="/js/components/navbar.js" defer></script>
