--- a/Cupcake/src/main/resources/templates/galleri.html
+++ b/Cupcake/src/main/resources/templates/galleri.html
@@ -34,6 +34,7 @@
     
     <!-- Scripts -->
     <script src="/js/heart-button.js" defer></script>
+    <script src="js/blocker.js"></script>
 
 </head>
 <body class="subpage galleri-page">
