--- a/Cupcake/src/main/resources/templates/order.html
+++ b/Cupcake/src/main/resources/templates/order.html
@@ -26,6 +26,7 @@
     <script src="js/cart.js" defer></script>
     <script src="js/order.js" defer></script>
     <script src="js/order-responsive.js" defer></script>
+    <script src="js/blocker.js"></script>
 
     <!-- Framwork load -->
     <link rel="stylesheet" href="css/guacamoleboy-wow.css">
