--- a/Cupcake/src/main/resources/templates/tak.html
+++ b/Cupcake/src/main/resources/templates/tak.html
@@ -19,6 +19,9 @@
     <!-- CSS Load -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- Script Load -->
+    <script src="js/blocker.js"></script>
+
     <!-- Framwork load -->
     <link rel="stylesheet" href="css/guacamoleboy-wow.css">
     <link rel="stylesheet" href="css/guacamoleboy-framework.css">
