--- a/Cupcake/src/main/resources/templates/payment.html
+++ b/Cupcake/src/main/resources/templates/payment.html
@@ -123,6 +123,44 @@
 
             <hr class="section-divider">
 
+            <!-- Customer Info -->
+            <h2>Kontaktinformation</h2>
+            <div class="guac-row">
+                <div class="guac-col-3 guac-mr-4">
+                    <input type="text"placeholder="Fornavn" class="customer-input" required>
+                </div>
+                <div class="guac-col-3">
+                    <input type="text" placeholder="Efternavn" class="customer-input" required>
+                </div>
+            </div>
+            <div class="guac-row">
+                <div class="guac-col-3 guac-mr-4">
+                    <input type="email" placeholder="din@email.dk" class="customer-input" required>
+                </div>
+                <div class="guac-col-3">
+                    <input type="tel" placeholder="+45 12 34 56 78" class="customer-input" required>
+                </div>
+            </div>
+            <div class="guac-row">
+                <div class="guac-col-3 guac-mr-4">
+                    <input type="text" placeholder="5000" class="customer-input" required>
+                </div>
+                <div class="guac-col-3">
+                    <input type="text" placeholder="Odense" class="customer-input" required>
+                </div>
+            </div>
+            <div class="guac-row">
+                <div class="guac-col-3 guac-mr-4">
+                    <input type="text" placeholder="Gade" class="customer-input" required>
+                </div>
+                <div class="guac-col-3">
+                    <input type="text" placeholder="Husnummer" class="customer-input" required>
+                </div>
+            </div>
+            <!-- Customer Info -->
+
+            <hr class="section-divider">
+
             <!-- Next Button -->
             <a href="/pay" class="next-btn" data-order-id="${order.id}">Videre</a>
             <!-- Next Button -->
